add hero-section css and action-section structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Landing Page</title>
   </head>
   <body>
@@ -36,13 +42,63 @@
             class="hero-img"
             src="hero.png"
             alt="A nature illustration"
-            width="500px"
-            height="auto"
+            width="1000px"
+            height="200px"
           />
         </div>
-        <div class="info-section"></div>
-        <div class="quote-section"></div>
-        <div class="action-section"></div>
+        <div class="info-section">
+          <h2>Some Random Information</h2>
+          <div class="info-boxes">
+            <div class="info-box">
+              <div class="info-img"></div>
+              <p class="info-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt, corporis.
+              </p>
+            </div>
+            <div class="info-box">
+              <div class="info-img"></div>
+              <p class="info-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt, corporis.
+              </p>
+            </div>
+            <div class="info-box">
+              <div class="info-img"></div>
+              <p class="info-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt, corporis.
+              </p>
+            </div>
+            <div class="info-box">
+              <div class="info-img"></div>
+              <p class="info-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt, corporis.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="quote-section">
+          <p class="quote-text">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
+            eaque saepe nam voluptatem dolorem voluptates repellat eligendi.
+            Iure, nulla voluptatum optio ducimus totam facere in repellat!
+            Eveniet, consequuntur. Blanditiis, inventore possimus! Quaerat
+            suscipit dolor iste minus nostrum in unde laboriosam vero. Ipsam
+            veniam cumque perferendis? Sit obcaecati quia minus? Suscipit?"
+          </p>
+          <p class="quote-person">-Anonymous Person</p>
+        </div>
+        <div class="action-section">
+          <div class="action-box">
+            <div class="action-info">
+              <p class="action-text">Call to action! It's time!</p>
+              <p class="action-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, ipsum?</p>
+            </div>
+            <button class="action-button" href="#"> Sign-Up</button>
+          </div>
+        </div>
       </div>
       <div class="footer"></div>
     </div>
