add action-section css

--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
           <div class="action-box">
             <div class="action-info">
               <p class="action-text">Call to action! It's time!</p>
-              <p class="action-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, ipsum?</p>
+              <p class="action-subtext">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse,
+                ipsum?
+              </p>
             </div>
-            <button class="action-button" href="#"> Sign-Up</button>
+            <button class="action-button" href="#">Sign-Up</button>
           </div>
         </div>
       </div>
